fix styles on tablet

--- a/src/styles/css/_media.scss
+++ b/src/styles/css/_media.scss
@@ -27,3 +27,10 @@
         @content;
     }
 }
+
+@mixin tablet {
+    @media (min-width: 811px)
+        and (max-width: 1024px) {
+        @content;
+    }
+}
